Fix collapse anim

--- a/assets/main.css
+++ b/assets/main.css
@@ -97,3 +97,8 @@ img.svg {
 .expandable:hover {
   cursor: pointer;
 }
+
+.detail-td {
+  height: 0 !important;
+  padding: 0 !important;
+}
